<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:id="@+id/scrollBar"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		tools:context="com.georgistephanov.android.pomodorotimer.StatisticsActivity">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/topLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:background="@color/white">

				<TextView
					android:id="@+id/period"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingTop="15dp"
					android:paddingBottom="15dp"
					android:paddingStart="15dp"
					android:paddingEnd="5dp"
					android:text="@string/last_month_statistics"
					android:textSize="@dimen/et_textSize"/>

				<ImageButton
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:background="@drawable/popup_menu_button"
					android:src="@drawable/arrow_down_30dp"
					android:tint="@color/gray"
					android:onClick="onArrowDownClick"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/lineGraphLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:background="@color/white"
				android:layout_marginTop="10dp"
				android:layout_marginLeft="12dp"
				android:layout_marginRight="12dp"
				android:translationZ="6dp">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textSize="@dimen/statistics_graphName_textSize"
					android:text="@string/working_time_label"
					android:padding="20dp"/>

				<lecho.lib.hellocharts.view.LineChartView
					android:id="@+id/lineChart"
					android:layout_width="match_parent"
					android:layout_height="300dp"
					android:layout_marginLeft="20dp"
					android:layout_marginRight="20dp"
					android:layout_marginBottom="10dp" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/lineGraphInfoLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/white"
				android:layout_marginLeft="12dp"
				android:layout_marginRight="12dp"
				android:orientation="vertical"
				android:translationZ="4dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingTop="20dp"
					android:paddingLeft="20dp"
					android:paddingRight="20dp">

					<TextView
						android:id="@+id/last_days_total"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="@dimen/statistics_label_textSize"
						android:text="@string/last_days_total"/>

					<TextView
						android:id="@+id/last_days_total_label"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="end"
						android:textSize="@dimen/statistics_label_textSize"
						android:fontFamily="sans-serif"
						android:textStyle="bold"/>

				</LinearLayout>


				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingTop="10dp"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					android:paddingBottom="20dp">

					<TextView
						android:id="@+id/last_days_avg"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="@dimen/statistics_label_textSize"
						android:text="@string/last_days_avg"/>

					<TextView
						android:id="@+id/last_days_avg_label"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="end"
						android:textSize="@dimen/statistics_label_textSize"
						android:fontFamily="sans-serif"
						android:textStyle="bold" />

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/pieChartLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:background="@color/white"
			android:layout_marginTop="10dp"
			android:layout_marginLeft="12dp"
			android:layout_marginRight="12dp"
			android:layout_marginBottom="10dp"
			android:translationZ="6dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="@dimen/statistics_graphName_textSize"
				android:text="@string/task_distribution_label"
				android:padding="20dp"/>

			<lecho.lib.hellocharts.view.PieChartView
				android:id="@+id/pieChart"
				android:layout_width="match_parent"
				android:layout_height="300dp"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:layout_marginBottom="10dp"  >
			</lecho.lib.hellocharts.view.PieChartView>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/bullet_list_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginLeft="12dp"
			android:layout_marginRight="12dp"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:background="@color/white"
			android:translationZ="6dp">

		</LinearLayout>

	</LinearLayout>

</ScrollView>
